--- a/webcit/static/styles/webcit.css
+++ b/webcit/static/styles/webcit.css
@@ -369,7 +369,7 @@ a:visited { color: #70342e }
 	outline-radius: 5px;
 	-khtml-outline-radius: 5px;
 	-moz-outline-radius: 5px;
-	behavior: url(static/style/PIE.htc);
+	behavior: url(static/styles/PIE.htc);
 }
 
 #customize a:active, #customize a:link, #customize a:visited {
@@ -1076,7 +1076,7 @@ li.event_unread span, a.event_read_title { font-size: 100% }
 	border-radius: 8px;
 	-khtml-border-radius: 8px;
 	-moz-border-radius: 8px;
-	behavior: url(/static/style/PIE.htc);
+	behavior: url(/static/styles/PIE.htc);
 	-webkit-box-shadow: #666 0px 1px 2px;
 	-moz-box-shadow: #666 0px 2px 3px;
 	box-shadow: #666 0px 2px 3px;
@@ -1098,7 +1098,7 @@ li.event_unread span, a.event_read_title { font-size: 100% }
         box-shadow: #666 0px 2px 3px;
 	-webkit-box-shadow: #666 0px 1px 2px;
         -moz-box-shadow: #666 0px 2px 3px;
-	behavior: url(/static/style/PIE.htc);
+	behavior: url(/static/styles/PIE.htc);
 	padding: 0.5em;
 }
 
@@ -1117,7 +1117,7 @@ li.event_unread span, a.event_read_title { font-size: 100% }
 	box-shadow: #666 0px 2px 3px;
 	-webkit-box-shadow: #666 0px 1px 2px;
 	-moz-box-shadow: #666 0px 2px 3px;
-	behavior: url(/static/style/PIE.htc);
+	behavior: url(/static/styles/PIE.htc);
 	background-color: #7d858c;
 	padding: 0.5em;
 }
